--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="edu.guet.jjhome.indexsp.MyApplication"
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,25 +22,19 @@
             android:value="1" />
 
         <activity
-            android:name="edu.guet.jjhome.indexsp.activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
-            android:name="edu.guet.jjhome.indexsp.activity.LoginActivity"
+            android:name=".activity.LoginActivity"
             android:windowSoftInputMode="adjustResize|stateVisible" >
         </activity>
         <activity
-            android:name="edu.guet.jjhome.indexsp.activity.DetailsActivity"
+            android:name=".activity.DetailsActivity"
             android:label="@string/activity_details"
-            android:parentActivityName="edu.guet.jjhome.indexsp.activity.MainActivity" >
+            android:parentActivityName=".activity.MainActivity" >
             <intent-filter>
                 <action android:name=".Details" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <!-- Parent activity meta-data to support 4.0 and lower -->
@@ -49,25 +43,38 @@
                 android:value="edu.guet.jjhome.indexsp.activity.MainActivity" />
         </activity>
         <activity
-            android:name="edu.guet.jjhome.indexsp.activity.SettingsActivity"
+            android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:name="edu.guet.jjhome.indexsp.activity.CreateMessageActivity"
+            android:name=".activity.CreateMessageActivity"
             android:label="@string/title_activity_create_message"
             android:windowSoftInputMode="stateVisible" >
         </activity>
         <activity
-            android:name="edu.guet.jjhome.indexsp.activity.AboutActivity"
+            android:name=".activity.AboutActivity"
             android:label="@string/title_activity_help" >
         </activity>
         <activity
-            android:name="edu.guet.jjhome.indexsp.activity.ChartActivity"
+            android:name=".activity.ChartActivity"
             android:label="@string/title_activity_chart" >
         </activity>
         <activity
-            android:name="edu.guet.jjhome.indexsp.activity.NewsActivity"
+            android:name=".activity.NewsActivity"
             android:label="@string/title_activity_news" >
+        </activity>
+        <activity
+            android:name=".activity.FunctionActivity"
+            android:label="@string/title_activity_function" >
+        </activity>
+        <activity
+            android:name=".activity.SplashActivity"
+            android:label="@string/title_activity_splash" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
